ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Ledger__c/CnP_PaaS__Ledger__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Ledger</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Ledger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>