ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Ledger__c/fields/CnP_PaaS__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Account_Type__c</fullName>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>