ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Ledger__c/fields/CnP_PaaS__Description__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>