ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Ledger__c/fields/CnP_PaaS__Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Sub_Account__c</fullName>
    <label>Sub Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>